@@ -66,6 +66,10 @@
 #include "via_dmabuffer.h"
 #include "via_3d.h"
 
+#ifdef XSERVER_LIBPCIACCESS
+#include <pciaccess.h>
+#endif
+
 #ifdef XF86DRI
 #define _XF86DRI_SERVER_
 #include "sarea.h"
@@ -234,8 +238,15 @@ typedef struct _VIA {
     int                 agpMem;
 
     CloseScreenProcPtr  CloseScreen;
-    pciVideoPtr         PciInfo;
-    PCITAG              PciTag;
+#ifdef XSERVER_LIBPCIACCESS
+        struct pci_device *PciInfo;
+        int mmio_bar;
+        int fb_bar;
+        PCITAG PciTag;
+#else
+        pciVideoPtr PciInfo;
+        PCITAG PciTag;
+#endif
     int                 Chipset;
     int                 ChipId;
     int                 ChipRev;
