@@ -30,6 +30,7 @@
 #endif
 
 #include "via_driver.h"
+#include "via.h"
 #include "via_id.h"
 
 /*
@@ -228,15 +229,15 @@ ViaCheckCardId(ScrnInfoPtr pScrn)
     struct ViaCardIdStruct *Id;
     VIAPtr pVia = VIAPTR(pScrn);
     
-    if ((pVia->PciInfo->subsysVendor == pVia->PciInfo->vendor) &&
-	(pVia->PciInfo->subsysCard == pVia->PciInfo->chipType))
+    if ((SUBVENDOR_ID(pVia->PciInfo) == VENDOR_ID(pVia->PciInfo)) &&
+       (SUBSYS_ID(pVia->PciInfo) == DEVICE_ID(pVia->PciInfo)))
         xf86DrvMsg(pScrn->scrnIndex, X_WARNING,
                    "Manufacturer plainly copied main PCI IDs to subsystem/card IDs.\n");
 
     for (Id = ViaCardId; Id->String; Id++) {
 	if ((Id->Chip == pVia->Chipset) && 
-	    (Id->Vendor == pVia->PciInfo->subsysVendor) &&
-	    (Id->Device == pVia->PciInfo->subsysCard)) {
+           (Id->Vendor == SUBVENDOR_ID(pVia->PciInfo)) &&
+           (Id->Device == SUBSYS_ID(pVia->PciInfo))) {
 	    xf86DrvMsg(pScrn->scrnIndex, X_PROBED, "Detected %s.\n", Id->String);
 	    pVia->Id = Id;
 	    return;
@@ -245,7 +246,7 @@ ViaCheckCardId(ScrnInfoPtr pScrn)
     
     xf86DrvMsg(pScrn->scrnIndex, X_ERROR, 
 	       "Unknown Card-Ids (%4X|%4X|%4X); please report to openchrome-users@openchrome.org\n",
-	       pVia->PciInfo->chipType, pVia->PciInfo->subsysVendor, pVia->PciInfo->subsysCard);
+               DEVICE_ID(pVia->PciInfo), SUBVENDOR_ID(pVia->PciInfo), SUBSYS_ID(pVia->PciInfo));
     pVia->Id = NULL;
 }
 
